contrib/setup_cluster/test/test_output/TC91/logs.out
NOTICE:  extension "file_fdw" does not exist, skipping
NOTICE:  extension "pgspider_fdw" does not exist, skipping
NOTICE:  extension "postgres_fdw" does not exist, skipping
NOTICE:  extension "sqlite_fdw" does not exist, skipping
NOTICE:  extension "tinybrace_fdw" does not exist, skipping
NOTICE:  extension "mysql_fdw" does not exist, skipping
NOTICE:  extension "griddb_fdw" does not exist, skipping
NOTICE:  extension "influxdb_fdw" does not exist, skipping
NOTICE:  extension "parquet_s3_fdw" does not exist, skipping
NOTICE:  extension "mongo_fdw" does not exist, skipping
NOTICE:  extension "oracle_fdw" does not exist, skipping
NOTICE:  extension "postgrest_fdw" does not exist, skipping
NOTICE:  extension "odbc_fdw" does not exist, skipping
NOTICE:  extension "jdbc_fdw" does not exist, skipping
NOTICE:  extension "dynamodb_fdw" does not exist, skipping
NOTICE:  extension "sqlumdashcs_fdw" does not exist, skipping
NOTICE:  extension "objstorage_fdw" does not exist, skipping
NOTICE:  extension "gitlab_fdw" does not exist, skipping
NOTICE:  extension "redmine_fdw" does not exist, skipping
NOTICE:  extension "pgspider_core_fdw" does not exist, skipping
NOTICE:  schema "temp_schema" does not exist, skipping
File:install_util.c Function:query_execute L:150 Msg:IMPORT FOREIGN SCHEMA "test_setclusterjdbc" FROM SERVER db2 INTO temp_schema; failed :ERROR:  syntax error at or near "User"
LINE 1: ...S (key 'true'), Db CHAR (1) OPTIONS (key 'true'), User CHAR ...
                                                             ^
QUERY:  CREATE FOREIGN TABLE IF NOT EXISTS columns_priv(Host CHAR (1) OPTIONS (key 'true'), Db CHAR (1) OPTIONS (key 'true'), User CHAR (1) OPTIONS (key 'true'), Table_name CHAR (1) OPTIONS (key 'true'), Column_name CHAR (1) OPTIONS (key 'true'), Timestamp TIMESTAMP, Column_priv SET) SERVER db2;

Config directory: ./
Node information file: node_information.json
Node structure file: node_structure.json
Timeout: 0
free db2
